fix building frame resources alignment

--- a/src/client/style/index.css
+++ b/src/client/style/index.css
@@ -627,7 +627,7 @@ body {
 }
 .l1noR {
     height: 30px;
-    margin-left: 205px;
+    margin-left: 219px;
 }
 .l1noR:nth-child(1) {
     width: 60px;
@@ -641,7 +641,7 @@ body {
 }
 .l2noR {
     height: 30px;
-    margin-left: 205px;
+    margin-left: 218px;
 }
 .l3R {
     height: 30px;
